# Acute-Lymphomatic-Leukemia_CNN

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
leukemia/constant/training_pipeline/: __init__.py
leukemia/data/: ingestion.py  transformation.py  validation.py
leukemia/entity/: artifact_entity.py
leukemia/exception/: exception.py
leukemia/train/: trainer.py
leukemia/utils/: visualization.py
notebooks/: docs_cache.txt  main.ipynb
src/logging/: logger.py
